[workspace]
resolver = "3"

members = [
    "ogcapi",
    "ogcapi-client",
    "ogcapi-drivers",
    "ogcapi-processes",
    "ogcapi-services",
    "ogcapi-types",
    "examples/*",
]
exclude = ["examples/*"]
default-members = ["ogcapi"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/ogcapi"
edition = "2024"
categories = ["science::geo"]
keywords = ["geography", "geo", "geospatial", "gis", "api"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
geojson = { version = "1.0", default-features = false }
# Pinned to a revision for now; to be replaced by a crates.io version once `jsonfg` is
# published. For local development, add a `[patch]` override pointing at a jsonfg checkout.
jsonfg = { git = "https://github.com/360-geo/jsonfg", rev = "82126d83268950121837aeae8dafc27e2f3d89d3", default-features = false }
log = "0.4.29"
serde = "1.0"
serde_json = "1.0"
serde_qs = "1.1"
thiserror = "2.0"
url = "2.5"
utoipa = "5.4"
